--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Strata by HTML5 UP</title>
+		<title>Benjamin Rackham, Astronomer</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,30 +16,173 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>I am Strata</strong>, a super simple<br />
-					responsive site template freebie<br />
-					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
+					<a href="#" class="image avatar"><img src="images/avatar.png" alt="Ben Rackham" /></a>
+					<h1><strong>Benjamin Rackham<br>Astronomer</strong><br />
+					</h1>
 				</div>
 			</header>
 
 		<!-- Main -->
 			<div id="main">
 
-				<!-- One -->
-					<section id="one">
+				<!-- Intro -->
+					<section id="intro">
 						<header class="major">
-							<h2>Ipsum lorem dolor aliquam ante commodo<br />
-							magna sed accumsan arcu neque.</h2>
+							<h2>Hi, I'm Ben. I study exoplanets and their stars.</h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+						<p>I'm a postdoc at the University of Arizona's <a href="http://www.as.arizona.edu">Steward Observatory</a>,
+							where I study exoplanetary atmospheres with <a href="http://distantearths.com/DanielApai/">Dániel Apai</a>.
+							My research focuses on the effects of stellar activity on observations of transiting exoplanets.
+							I am a member of the
+							<a href="http://eos-nexus.org/">EOS</a>,
+							<a href="http://project-access.space/">ACCESS</a>, and
+							<a href="http://project-eden.space/">EDEN</a>
+							Projects.</p>
+						<p>In September, I'll start a new position as a
+							<a href="https://www.hsfoundation.org/programs/science/51-pegasi-b-fellowship/">51 Pegasi b Postdoctoral Fellow</a>
+							at MIT.</p>
+
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="files/Rackham_CV_2019_06.pdf" target="_blank" class="button">Here's my CV.</a></li>
 						</ul>
 					</section>
 
+					<!-- Publications -->
+					<section id="publications">
+						<header class="major">
+							<h2>Publications</h2>
+						</header>
+						<p>Here are ADS lists of
+						<a href="https://ui.adsabs.harvard.edu/#/public-libraries/7BjXy1TzQ4-HubMUiOfMCQ" target="_blank">my first-author peer-reviewed publications</a>,
+						<a href="https://ui.adsabs.harvard.edu/#/public-libraries/qsq2WnsfR7u9_lXNtslG-A" target="_blank">all peer-reviewed publications</a>,
+						and
+						<a href="https://ui.adsabs.harvard.edu/#/public-libraries/rpxK-drJSDqRsOrjCPSzdw" target="_blank">all publications and contributions</a>.</p>
+
+						<p>Some highlights:</p>
+
+						<h3>First-author publications</h3>
+
+						<div class="col-6 col-12-xsmall">
+							<ol>
+								<li>
+									<b>The Transit Light Source Effect II: The Impact of Stellar Heterogeneity on Transmission Spectra of Planets Orbiting Broadly Sun-like Stars</b><br>
+								  <b>Rackham</b>, Apai, &amp; Giampapa. 2019. AJ 157, 96
+									[<a href="https://ui.adsabs.harvard.edu/abs/2019AJ....157...96R" target="_blank">ADS</a>]
+									[<a href="https://arxiv.org/abs/1812.06184" target="_blank">arXiv</a>]
+								</li>
+                <br>
+								<li>
+									<b>The Transit Light Source Effect: False Spectral Features and Incorrect Densities for M-dwarf Transiting Planets</b><br>
+									<b>Rackham</b>, Apai, &amp; Giampapa. 2018. ApJ 853, 122
+									[<a href="https://ui.adsabs.harvard.edu/abs/2018ApJ...853..122R" target="_blank">ADS</a>]
+									[<a href="https://arxiv.org/abs/1711.05691" target="_blank">arXiv</a>]
+								</li>
+							  <br>
+								<li>
+									<b>ACCESS I: An Optical Transmission Spectrum of GJ 1214b Reveals a Heterogeneous Stellar Photosphere</b><br>
+									<b>Rackham</b> et al. 2017. ApJ 834, 151
+									[<a href="https://ui.adsabs.harvard.edu/abs/2017ApJ...834..151R" target="_blank">ADS</a>]
+									[<a href="https://arxiv.org/abs/1612.00228" target="_blank">arXiv</a>]
+								</li>
+							</ol>
+						</div>
+
+						<h3>Second- and third-author publications</h3>
+
+						<div class="col-6 col-12-xsmall">
+							<ol>
+								<li>
+									<b>ACCESS: Ground-based Optical Transmission Spectroscopy of the Hot Jupiter WASP-4b</b><br>
+									Bixel, <b>Rackham</b> et al. 2019. AJ 157, 68
+									[<a href="https://ui.adsabs.harvard.edu/abs/2019AJ....157...68B" target="_blank">ADS</a>]
+									[<a href="https://arxiv.org/abs/1812.07177" target="_blank">arXiv</a>]
+								</li>
+							  <br>
+								<li>
+									<b>ACCESS: A featureless optical transmission spectrum for WASP-19b from Magellan/IMACS</b><br>
+									Espinoza, <b>Rackham</b> et al. 2019. MNRAS 482, 2065
+									[<a href="https://ui.adsabs.harvard.edu/abs/2019MNRAS.482.2065E" target="_blank">ADS</a>]
+									[<a href="https://arxiv.org/abs/1807.10652" target="_blank">arXiv</a>]
+								</li>
+							  <br>
+								<li>
+									<b><b>The Near-Infrared Transmission Spectra of TRAPPIST-1 Planets b, c, d, e, f, and g and Stellar Contamination in Multi-Epoch Transit Spectra</b><br>
+									Zhanbo Zhang, Yifan Zhou, <b>Rackham</b>, &amp; Apai. 2018. AJ 156, 178<br>
+									[<a href="https://ui.adsabs.harvard.edu/abs/2018AJ....156..178Z" target="_blank">ADS</a>]
+									[<a href="https://arxiv.org/abs/1802.02086" target="_blank">arXiv</a>]
+								</li>
+							  <br>
+								<li>
+									<b>Retrieval of planetary and stellar properties in transmission spectroscopy with AURA</b><br>
+									Pinhas, <b>Rackham</b>, Madhusudhan, &amp; Apai. 2018. MNRAS 480, 5314<br>
+									[<a href="https://ui.adsabs.harvard.edu/abs/2018MNRAS.480.5314P" target="_blank">ADS</a>]
+									[<a href="https://arxiv.org/abs/1808.10017" target="_blank">arXiv</a>]
+								</li>
+							</ol>
+						</div>
+
+						<h3>Selected non-peer-reviewed publications</h3>
+
+						<div class="col-6 col-12-xsmall">
+							<ol>
+								<li>
+									<b>Constraining Stellar Photospheres as an Essential Step for Transmission Spectroscopy of Small Exoplanets</b><br>
+									<b>Rackham</b> et al. 2019. White paper submitted to the Astro2020 Decadal Survey.
+									[<a href="https://ui.adsabs.harvard.edu/abs/2019BAAS...51c.328R" target="_blank">ADS</a>]
+									[<a href="https://arxiv.org/abs/1903.06152" target="_blank">arXiv</a>]
+								</li>
+							  <br>
+								<li>
+									<b>Understanding Stellar Contamination in Exoplanet Transmission Spectra as an Essential Step in Small Planet Characterization</b><br>
+									Apai, <b>Rackham</b> et al. 2018. White paper submitted to the NAS Committee on Exoplanet Science Strategy
+									[<a href="https://ui.adsabs.harvard.edu/abs/2018arXiv180308708A" target="_blank">ADS</a>]
+									[<a href="https://arxiv.org/abs/1803.08708" target="_blank">arXiv</a>]
+								</li>
+							</ol>
+						</div>
+
+					</section>
+
+					<!-- Outreach -->
+					<hr />
+					<section id="outreach">
+						<header class="major">
+							<h2>Outreach</h2>
+						</header>
+
+						<p>I am committed to furthering the impact of my research through teaching, mentoring, and public outreach efforts.
+						Most of the efforts that I have been involved in are listed in my
+						<a href="files/Rackham_CV_2019_06.pdf">CV</a>.
+						Some recent highlights are detailed below.</p>
+
+						<h3>Project POEM</h3>
+						<p><a href="http://poem.coe.arizona.edu/" target="_blank">Project POEM</a> aims to foster interest in STEM careers among visually impaired middle and high school students.
+						As part of the kick-off week for Project POEM at the UA SkyCenter atop Mt. Lemmon in 2018,
+						I developed and led an activity that encouraged 12 participants to explore the properties of transiting exoplanets using sonified transit light curves.
+						I revised the activity in 2019 and delivered it to 14 Project POEM participants.</p>
+
+						<p>The activity materials are available on <a href="https://github.com/EDENSurvey/Project-POEM-Activity">GitHub</a>.
+
+						<ul class="actions">
+							<li><a href="http://project-eden.space/songsofexoplanets/" target="_blank" class="button">Learn More</a></li>
+						</ul>
+
+						<h3>Teen Astronomy Caf&eacute;</h3>
+
+						<p><a href="http://www.teenastronomycafe.org" target="_blank">The Teen Astronomy Caf&eacute; Program</a>
+						brings research at the forefront of astronomy to high school students in the Tucson area.
+						Researchers develop and deliver engaging actvities that introduce the big questions in their field and the tools we use to address them.
+						Along with D&aacute;niel Apai, I developed and led an activity that explored how we discover and characterize exoplanets with the transit technique.
+						The activity uses <code>Python</code> and <code>Jupyter Notebook</code> to familiarize students with tools that astronomers use for this research.
+						</p>
+
+						<p>The activity materials are available on <a href="https://github.com/EDENSurvey/TeenAstroCafeActivity">GitHub</a>.
+
+					</section>
+
+
 				<!-- Two -->
-					<section id="two">
+					<!-- <section id="two">
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
@@ -76,10 +219,10 @@
 						<ul class="actions">
 							<li><a href="#" class="button">Full Portfolio</a></li>
 						</ul>
-					</section>
+					</section> -->
 
 				<!-- Three -->
-					<section id="three">
+					<!-- <section id="three">
 						<h2>Get In Touch</h2>
 						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
 						<div class="row">
@@ -114,11 +257,10 @@
 								</ul>
 							</div>
 						</div>
-					</section>
+					</section> -->
 
 				<!-- Four -->
-				<!--
-					<section id="four">
+					<!-- <section id="four">
 						<h2>Elements</h2>
 
 						<section>
@@ -429,10 +571,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 							<h5>Left &amp; Right</h5>
 							<p><span class="image left"><img src="images/avatar.jpg" alt="" /></span>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent.</p>
 							<p><span class="image right"><img src="images/avatar.jpg" alt="" /></span>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent.</p>
-						</section>
+						</section> -->
 
 					</section>
-				-->
 
 			</div>
 
@@ -440,13 +581,13 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://twitter.com/benrackham" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://github.com/brackham" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<!-- <li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li> -->
+						<li><a href="mailto:brackham@as.arizona.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; 2019 Benjamin V. Rackham</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
