Added research section

--- a/index.html
+++ b/index.html
@@ -47,6 +47,28 @@
 						</ul>
 					</section>
 
+					<!-- My Research -->
+						<section id="research">
+							<h2>My Research</h2>
+							<div class="row">
+								<article class="col-12 col-12-xsmall work-item">
+									<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
+									<h3>Finding new worlds</h3>
+									<p>Cool stars with transiting exoplanets provide our best chance to study small, temperate exoplanets in the next 20 years.</p>
+								</article>
+								<article class="col-12 col-12-xsmall work-item">
+									<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
+									<h3>Characterizing their host stars</h3>
+									<p>To understand these exoplanets, we first must understand their host stars.</p>
+								</article>
+								<article class="col-12 col-12-xsmall work-item">
+									<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
+									<h3>Studying their atmospheres</h3>
+									<p>With this foundation, we can effectively study the atmospheres of these worlds with transit spectroscopy.</p>
+								</article>
+							</div>
+						</section>
+
 					<!-- Publications -->
 					<section id="publications">
 						<header class="major">
