--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 						</header>
 
 						<p>I am committed to furthering the impact of my research through teaching, mentoring, and public outreach efforts.
-						Most of the efforts that I have been involved in are listed in my
+						Most of the efforts I've been involved in are listed in my
 						<a href="files/Rackham_CV_2019_06.pdf">CV</a>.
 						Some recent highlights are detailed below.</p>
 
@@ -192,8 +192,8 @@
 						<h3>Teen Astronomy Caf&eacute;</h3>
 
 						<p><a href="http://www.teenastronomycafe.org" target="_blank">The Teen Astronomy Caf&eacute; Program</a>
-						brings research at the forefront of astronomy to high school students in the Tucson area.
-						Researchers develop and deliver engaging actvities that introduce the big questions in their field and the tools we use to address them.
+						brings cutting-edge astronomical research to high school students in the Tucson area.
+						Professional astronomers develop and deliver engaging actvities that introduce the big questions in their field and the tools we use to address them.
 						Along with D&aacute;niel Apai, I developed and led an activity that explored how we discover and characterize exoplanets with the transit technique.
 						The activity uses <code>Python</code> and <code>Jupyter Notebook</code> to familiarize students with tools that astronomers use for this research.
 						</p>
