Buttons. beat. hyperlinks.

--- a/index.html
+++ b/index.html
@@ -74,11 +74,17 @@
 						<header class="major">
 							<h2>Publications</h2>
 						</header>
-						<p>Here are ADS lists of
-						<a href="https://ui.adsabs.harvard.edu/#/public-libraries/7BjXy1TzQ4-HubMUiOfMCQ" target="_blank">my first-author peer-reviewed publications</a>,
-						<a href="https://ui.adsabs.harvard.edu/#/public-libraries/qsq2WnsfR7u9_lXNtslG-A" target="_blank">all peer-reviewed publications</a>,
-						and
-						<a href="https://ui.adsabs.harvard.edu/#/public-libraries/rpxK-drJSDqRsOrjCPSzdw" target="_blank">all publications and contributions</a>.</p>
+						<p>ADS lists:
+
+						<ul class="actions">
+							<li><a href="https://ui.adsabs.harvard.edu/#/public-libraries/7BjXy1TzQ4-HubMUiOfMCQ" target="_blank" class="button">First-author peer-reviewed publications</a></li>
+						</ul>
+						<ul class="actions">
+							<li><a href="https://ui.adsabs.harvard.edu/#/public-libraries/qsq2WnsfR7u9_lXNtslG-A" target="_blank" class="button">All peer-reviewed publications</a></li>
+						</ul>
+						<ul class="actions">
+							<li><a href="https://ui.adsabs.harvard.edu/#/public-libraries/rpxK-drJSDqRsOrjCPSzdw" target="_blank" class="button">All publications and contributions</a></li>
+						</ul>
 
 						<p>Some highlights:</p>
 
